--- a/pangeo/Chart.yaml
+++ b/pangeo/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: pangeo
-version: v0.1.1
+version: 19.02.11
 description: An extention of jupyterhub with extra Pangeo resources
 maintainers:
   - name: Jacob Tomlinson (Met Office)
